[#15293] Remove 12.x deprecations